--- a/Laboratorio 3/TPInmobiliaria/gradle/libs.versions.toml
+++ b/Laboratorio 3/TPInmobiliaria/gradle/libs.versions.toml
@@ -15,6 +15,7 @@ activity = "1.11.0"
 playServicesMaps = "19.2.0"
 converterGson = "3.0.0"
 retrofit = "3.0.0"
+playServicesLocation = "21.3.0"
 
 [libraries]
 junit = { group = "junit", name = "junit", version.ref = "junit" }
@@ -32,6 +33,7 @@ activity = { group = "androidx.activity", name = "activity", version.ref = "acti
 play-services-maps = { group = "com.google.android.gms", name = "play-services-maps", version.ref = "playServicesMaps" }
 converter-gson = { group = "com.squareup.retrofit2", name = "converter-gson", version.ref = "converterGson" }
 retrofit = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofit" }
+play-services-location = { group = "com.google.android.gms", name = "play-services-location", version.ref = "playServicesLocation" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
