--- a/Laboratorio 3/TPInmobiliaria/gradle/libs.versions.toml
+++ b/Laboratorio 3/TPInmobiliaria/gradle/libs.versions.toml
@@ -16,6 +16,7 @@ playServicesMaps = "19.2.0"
 converterGson = "3.0.0"
 retrofit = "3.0.0"
 playServicesLocation = "21.3.0"
+converterScalars = "3.0.0"
 
 [libraries]
 junit = { group = "junit", name = "junit", version.ref = "junit" }
@@ -34,6 +35,7 @@ play-services-maps = { group = "com.google.android.gms", name = "play-services-m
 converter-gson = { group = "com.squareup.retrofit2", name = "converter-gson", version.ref = "converterGson" }
 retrofit = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofit" }
 play-services-location = { group = "com.google.android.gms", name = "play-services-location", version.ref = "playServicesLocation" }
+converter-scalars = { group = "com.squareup.retrofit2", name = "converter-scalars", version.ref = "converterScalars" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
