--- a/Laboratorio 3/TPInmobiliaria/app/src/main/AndroidManifest.xml
+++ b/Laboratorio 3/TPInmobiliaria/app/src/main/AndroidManifest.xml
@@ -1,23 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:usesCleartextTraffic="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.TPInmobiliaria">
+        android:theme="@style/Theme.TPInmobiliaria"
+        android:usesCleartextTraffic="true">
+        <activity
+            android:name=".ui.perfil.CambiarPasswordActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.login.ResetearPasswordActivity"
+            android:exported="false" />
+
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyCcQTARMKhCaYEEQLQrNxzir8-Vf7fZ9Ko"/>
+            android:value="AIzaSyCcQTARMKhCaYEEQLQrNxzir8-Vf7fZ9Ko" />
+
         <activity
             android:name=".ui.login.LoginActivity"
             android:exported="true"
@@ -28,16 +38,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.TPInmobiliaria.NoActionBar"
-            >
-
-        </activity>
-
+            android:theme="@style/Theme.TPInmobiliaria.NoActionBar" />
     </application>
 
 </manifest>
