--- a/Laboratorio 3/TPInmobiliaria/gradle/libs.versions.toml
+++ b/Laboratorio 3/TPInmobiliaria/gradle/libs.versions.toml
@@ -17,6 +17,8 @@ converterGson = "3.0.0"
 retrofit = "3.0.0"
 playServicesLocation = "21.3.0"
 converterScalars = "3.0.0"
+recyclerview = "1.4.0"
+glide = "4.16.0"
 
 [libraries]
 junit = { group = "junit", name = "junit", version.ref = "junit" }
@@ -36,6 +38,8 @@ converter-gson = { group = "com.squareup.retrofit2", name = "converter-gson", ve
 retrofit = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofit" }
 play-services-location = { group = "com.google.android.gms", name = "play-services-location", version.ref = "playServicesLocation" }
 converter-scalars = { group = "com.squareup.retrofit2", name = "converter-scalars", version.ref = "converterScalars" }
+recyclerview = { group = "androidx.recyclerview", name = "recyclerview", version.ref = "recyclerview" }
+glide = { group = "com.github.bumptech.glide", name = "glide", version.ref = "glide" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
