--- a/Laboratorio 3/TPInmobiliaria/app/src/main/AndroidManifest.xml
+++ b/Laboratorio 3/TPInmobiliaria/app/src/main/AndroidManifest.xml
@@ -30,8 +30,7 @@
 
         <activity
             android:name=".ui.login.LoginActivity"
-            android:exported="true"
-            android:theme="@style/Theme.TPInmobiliaria">
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -41,8 +40,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.TPInmobiliaria.NoActionBar" />
+            android:label="@string/app_name" />
     </application>
 
 </manifest>
