--- a/Laboratorio 3/TPInmobiliaria/app/src/main/AndroidManifest.xml
+++ b/Laboratorio 3/TPInmobiliaria/app/src/main/AndroidManifest.xml
@@ -6,6 +6,8 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
+    <uses-permission android:name="android.permission.CALL_PHONE" />
+    <uses-feature android:name="android.hardware.telephony" android:required="false" />
 
     <application
         android:allowBackup="true"
@@ -17,9 +19,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TPInmobiliaria"
         android:usesCleartextTraffic="true">
-        <activity
-            android:name=".ui.perfil.CambiarPasswordActivity"
-            android:exported="false" />
+
         <activity
             android:name=".ui.login.ResetearPasswordActivity"
             android:exported="false" />
